...
    private var settingsButton: some View {
      Button(
        action: {
          isSettingsPresented = true
        },
        label: {
          Label("Settings", systemImage: "gear")
        }
      )
      .disabled(store.vpnStatus == .invalid)
    }

    private var authMenu: some View {
...
        } else {
          Button(
            action: {
              signInButtonTapped()
            },
            label: {
              Label("Sign in", systemImage: "person.crop.circle.fill.badge.plus")
            }
          )
        }
        Divider()
        Button(
          action: {
...
