...
          .multilineTextAlignment(.center)
          .padding(EdgeInsets(top: 0, leading: 5, bottom: 0, trailing: 5))
          Spacer()
          Image(systemName: "network.badge.shield.half.filled")
            .imageScale(.large)
          Spacer()
          Button("Grant VPN Permission") {
            installVPNConfiguration()
          }
          .buttonStyle(.borderedProminent)
          .controlSize(.large)
          Text(
            "After \(actionVerbage()) on the above button,\nclick on 'Allow' when prompted."
...
